# PF-ia-service

./: .coveragerc  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  Makefile  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/api/routes/: planning.py
app/core/: config.py  database.py  rate_limiter.py  security.py
app/models/: models.py
app/schemas/: requete.py  response.py
app/services/: ai_planning_service.py  database_service.py  openai_service.py  tournament_service.py
tests/: __init__.py  conftest.py  test_ai_planning_service.py  test_database_service.py  test_integration.py  test_openai_service.py  test_rate_limiter.py  test_security.py  test_tournament_service.py
